# learn-sea-orm

./: .env  Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: auth_log.rs  lib.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220219_224700_create_user_table.rs  m20220219_233200_create_auth_log_table.rs
src/: main.rs
