[package]
name = "learn-sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
entity = { path = "entity" }
migration = { path = "migration" }
uuid = "0.8.2"
